Fix alignment for landing page logo

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,7 @@
 @import '../../stylesheets/base';
 
 .app {
+  height: inherit;
   display: flex;
   align-items: center;
   justify-content: center;
